# icure-multiplatform-sdk

./: .gitignore  .gitmodules  Multiplatform SDK design.md  README.md  build.Dockerfile  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-linux.yml  docker-image.yml  generate_typescript.yml  license-report.yaml  publish.yml  release.yml  trigger-ci.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: ConfigureAndroidLibrary.kt  ConfigureJvmTest.kt  ConfigureMultiplatform.kt  Plugins.kt
cardinal-sdk/: build.gradle.kts
cardinal-sdk/src/commonMain/kotlin/: Example.kt
ci/: cloudbuild.yaml
core/: build.gradle.kts
core/src/androidMain/: AndroidManifest.xml
core/src/androidMain/kotlin/: platform.kt
core/src/commonMain/kotlin/: Platform.kt
core/src/commonTest/kotlin/: SampleTest.kt
core/src/iosMain/kotlin/: Platform.kt
core/src/jsMain/kotlin/: platform.kt
core/src/jvmMain/kotlin/: platform.kt
dart-wrapper/: build.gradle.kts
dart-wrapper/cardinal_sdk/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart-wrapper/cardinal_sdk/android/: .gitignore  build.gradle  settings.gradle
dart-wrapper/cardinal_sdk/example/: README.md  pubspec.yaml
dart-wrapper/cardinal_sdk/example/android/: build.gradle.kts
dart-wrapper/cardinal_sdk/example/integration_test/: plugin_integration_test.dart
dart-wrapper/cardinal_sdk/example/ios/: Podfile
dart-wrapper/cardinal_sdk/example/lib/: main.dart
dart-wrapper/cardinal_sdk/example/test/: widget_test.dart
dart-wrapper/cardinal_sdk/ios/: .gitignore  cardinal_sdk.podspec
dart-wrapper/cardinal_sdk/ios/Classes/: ApiDispatcher.swift  ApisPlugin.swift  CardinalMaintenanceTaskApiDispatcher.swift  CardinalSdkPlugin.swift  CodeApiDispatcher.swift  CryptoPlugin.swift  DocumentTemplateApiDispatcher.swift  FiltersPlugin.swift  FormBasicApiDispatcher.swift  FrontEndMigrationApiDispatcher.swift  GroupApiDispatcher.swift  HealthElementBasicApiDispatcher.swift  HealthcarePartyApiDispatcher.swift  InitializersPlugin.swift  InsuranceApiDispatcher.swift  KeywordApiDispatcher.swift  MessageApiDispatcher.swift  PaginatedListIteratorDispatcher.swift  PaginatedListIteratorPlugin.swift  ReceiptApiDispatcher.swift  UtilsPlugin.swift  (+3 more)
dart-wrapper/cardinal_sdk/lib/: cardinal_sdk.dart  cardinal_sdk_method_channel.dart  cardinal_sdk_platform_interface.dart
dart-wrapper/lib/: build.gradle.kts
gradle/: libs.versions.toml
icure-sdk/: .editorConfig  build.gradle.kts  tsconfig.json
kryptom/: build.gradle.kts
kryptom/src/androidMain/: AndroidManifest.xml
ktor-curl/: Readme.md  build.gradle.kts
ktor-curl/interop/: libcurl.def
python-wrapper/: README.md  build.gradle.kts
python-wrapper/demo/: Dockerfile  Main.kt  Tmp.py
python-wrapper/demo/icure/: __init__.py  storage.py
python-wrapper/src/commonMain/resources/: pyproject.toml
python-wrapper/src/python/: CardinalSdk.py  CryptoStrategies.py  IcureSdk.py  __init__.py  async_utils.py  authentication.py  kotlin_dll_loader.py  kotlin_types.py  storage.py
ts-wrapper/: README.md  build.gradle.kts  tsconfig.json
(+6749 files in other folders)
